Fix: Change `list tasks` route to `GET`
